Mon Feb  8 06:58:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/fe/lex.yy.cpp:
          Fixed Windows CE compile error

Sat Feb  6 13:50:43 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * tao/GIOP_Message_State.cpp:
          Fixed strict aliasing warning.

Fri Feb  5 19:20:42 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_home/home_svs.cpp:
        * TAO_IDL/be/be_visitor_home/home_svh.cpp:
        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
        * TAO_IDL/be_include/be_visitor_ccm_pre_proc.h:
        * TAO_IDL/be_include/be_visitor_xplicit_pre_proc.h:

          Fixed bug introduced by the recent change in handling of
          home factories and finders, where the return type of an
          inherited factory or finder was the type of the component
          managed by the derived home, instead of the managed component
          of the base home, as it should be.

Thu Feb  4 14:13:32 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/be/be_visitor_union/discriminant_ci.cpp:
          Changed code to generate octal numbers where they are meant instead
          of decimals. Removed code for wchars since wchar discriminant is
          not allowed in unions.

        * TAO_IDL/be/be_global.cpp:
          Fixed a memory leak in tao_idl.

        * TAO_IDL/ast/ast_module.cpp:
          Fixed bug#3819. Multiple forward declarations of valuetypes,
          eventtypes, and components don't crash tao_idl now.

Thu Feb  4 13:56:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/Makefile.am:
          Regenerated

Thu Feb  4 09:25:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged revision 88756-88826 from idl3_plus_backend2 to svn head.

        * orbsvcs/IFR_Service/ifr_adding_visitor.h:
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:

          Change IFR loader backend correspondingly with the