@@ -199,7 +199,7 @@ Demux_Test_Server::init (int argc, ACE_TCHAR *argv [])
       char poa_name [128];
 
       ACE_OS::memset (poa_name, 0, 128);
-      (void) fscanf (this->poa_fp_, "%s", poa_name);
+      int n_matched = fscanf (this->poa_fp_, "%s", poa_name);
 
       try
         {
@@ -270,7 +270,7 @@ Demux_Test_Server::init (int argc, ACE_TCHAR *argv [])
 
                   ACE_OS::memset (servant_name, 0, 128);
 
-                  (void) fscanf (this->servant_fp_, "%s", servant_name);
+                  n_matched = fscanf (this->servant_fp_, "%s", servant_name);
 
                   ACE_DEBUG ((LM_DEBUG,
                               "Activating Servant with Name : %s\n",
