@@ -36,26 +36,27 @@ RT_Properties::read_from (const ACE_TCHAR *file_name)
   char string_field[256];
   int int_field;
   unsigned int i = 0;
+  int n_matched;
 
   while (fscanf (fp, "%s", string_field) != EOF )
     {
       if (ACE_OS::strcmp (string_field, "Priority") == 0)
         {
-          fscanf (fp, "%d", &int_field);
+          n_matched = fscanf (fp, "%d", &int_field);
           rt_properties->priority (int_field);
         }
       else if (ACE_OS::strcmp (string_field, "Priority_Bands") == 0)
         {
-          fscanf (fp, "%d", &int_field);
+          n_matched = fscanf (fp, "%d", &int_field);
           rt_properties->priority_bands_.length (int_field);
 
         }
       else if (ACE_OS::strcmp (string_field, "Priority_Range") == 0)
         {
-          fscanf (fp, "%d", &int_field);
+          n_matched = fscanf (fp, "%d", &int_field);
           rt_properties->priority_bands_[i].low = int_field;
 
-          fscanf (fp, "%d", &int_field);
+          n_matched = fscanf (fp, "%d", &int_field);
           rt_properties->priority_bands_[i].high = int_field;
 
           ++i;
